# PY_WEB_HW_03

./: README.md
app_docker/: Dockerfile  executor.py
app_docker/project_of_the_5_th/: Notes.py  average_phonebook.py
app_pipenv/: requirements.txt
app_pipenv/project_of_the_5_th/: file_parser.py  info.py  normalize.py
app_poetry/: pyproject.toml
app_poetry/project_of_the_5_th/: sort_starter.py
