[tool.poetry]
name = "app_poetry"
version = "0.1.0"
description = ""
authors = ["Andrii V. <kidstonek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
pybakers = "executor:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
